Implementação do Redis.
