# src/routes/authorRouter.js
@@ -4,11 +4,11 @@ const router = express.Router()
 import {create, list, show, update, remove} from '../controllers/authorController'
 
 router
-    .post('/author', create)
-    .get('/author', list)
-    .get('/author/:id', show)
-    .put('/author/:id', update)
-    .delete('/author/:id', remove)
+    .post('/authors', create)
+    .get('/authors', list)
+    .get('/authors/:id', show)
+    .put('/authors/:id', update)
+    .delete('/authors/:id', remove)
  
 
 module.exports = app => app.use('/api', router)
